group 'com.irad'
version '0.0.1'

apply plugin: 'java'

sourceCompatibility = 10

repositories {
    mavenCentral()
    flatDir {
        dirs 'libs'
    }
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile name: "face-1.3.0"
    compile name: "speakerrecognition-1.1.0"
    compile name: "jlibfprint-1.0-SNAPSHOT"
    compile 'com.github.mhshams:jnbis:2.0.0'
    compile 'com.github.sarxos:webcam-capture:0.3.12'
    compile 'com.google.code.gson:gson:2.8.2'
    compile 'org.apache.httpcomponents:httpmime:4.5.5'
    compile 'commons-io:commons-io:2.6'
    compile 'org.slf4j:slf4j-nop:1.7.25'
    compile 'com.google.firebase:firebase-admin:5.9.0'
    compile 'com.1stleg:jnativehook:2.1.0'
    /*
    compile 'com.google.firebase:firebase-admin:5.8.0'
    compile 'com.hierynomus:sshj:0.23.0'
    compile 'com.google.cloud:google-cloud:+'
    compile 'org.kohsuke:libpam4j:1.8' */

}
